# Android-IDE-core

./: .gitignore  .gitmodules  CLAUDE.md  README.md  settings.gradle.kts
.github/workflows/: ci.yml  update-free-tiers.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/java/dev/aarso/hyleprobe/: HyleProbeActivity.kt  RadiantGlowProbe.kt
app/src/full/: AndroidManifest.xml
app/src/full/java/dev/aarso/data/: ApkInstaller.kt
app/src/full/java/dev/aarso/flavor/: InvocationFeatures.kt
app/src/full/java/dev/aarso/service/: OverlayService.kt  ScreenCaptureService.kt
app/src/full/java/dev/aarso/ui/: ScreenCaptureActivity.kt
app/src/full/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: free_tiers.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/dev/aarso/: AarsoApp.kt  CrashLog.kt
app/src/main/java/dev/aarso/data/: AgentRepoRunner.kt  AppDatabase.kt  BuildsRepo.kt  ConversationsStore.kt  Converters.kt  CouncilStore.kt  DataExport.kt  DeviceInfo.kt  DeviceRepo.kt  DownloadCenter.kt  DownloadResume.kt  FreeTierStore.kt  FreeTierUpdater.kt  FreeTierUsageStore.kt  GitBackup.kt  GitBrowse.kt  GitEdit.kt  GitHostStore.kt  GitTransport.kt  ImageProviderStore.kt  ImageStore.kt  IncidentsStore.kt  IssueBoardRepo.kt  KvCacheStore.kt  LedgerMapper.kt  LedgerStore.kt  LocalModelStore.kt  LoopStore.kt  LoopSyncRepo.kt  Mappers.kt  MessageTreeRepository.kt  ModelDownloader.kt  NotesStore.kt  OperationQueueStore.kt  PricingStore.kt  ProviderStore.kt  RemoteHostStore.kt  ScaffoldPublishRepo.kt  SdModelStore.kt  SessionStore.kt  (+1 more)
app/src/main/java/dev/aarso/di/: AppContainer.kt
app/src/main/java/dev/aarso/domain/: Conversation.kt  MessageNode.kt  (+3 more)
app/src/main/res/drawable/: ic_arrow_down.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: fileprovider_paths.xml  interaction_service.xml
docs/: CORE_FOUNDATIONS.md  HANDOFF-CURRENT.md  HANDOFF.md  STATE.md  build-plan.md  status.md
docs/brand/: README.md
docs/design/: README.md  agentic-ide.md  app-distribution.md  coding-assistant.md  cost.md  council-workflows.md  disclosure.md  information-architecture.md  loop-distillation.md  material-language.md  open-ux-decisions.md  project-management.md  rendering-handoff.md  tree-sovereignty.md  voice-input.md  workflow-builder.md
docs/handoff/: hyle-extraction.md
docs/play/: content-rating.md  data-safety.md  genai-declaration.md  privacy-policy.md  release-process.md  store-listing.md
hyle-probe/: build.gradle.kts
scripts/: setup-android-sdk.sh  update_free_tiers.py
sdengine/: build.gradle.kts
sdengine/src/main/cpp/: CMakeLists.txt  sd_jni.cpp
(+293 files in other folders)
